argocd/media/download/download-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: downloader
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent
          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "512Mi"
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
              subPath: qbittorrent
          ports:
            - containerPort: 8080
              name: qbitt-http

        - name: slskd
          image: slskd/slskd:latest
          volumeMounts:
            - name: slskd-config
              mountPath: /app
            - name: media
              mountPath: /mnt/music
              subPath: Music
            - name: downloads
              mountPath: /downloads
              subPath: soulseek
          ports:
            - containerPort: 5030
              name: slskd-http
            - containerPort: 5031
              name: slskd-https
            - containerPort: 50300
              name: slskd-listen

        - name: gluetun
          image: ghcr.io/qdm12/gluetun:v3.40.0
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - name: tun
              mountPath: /dev/net/tun
            - name: mullvad-config-secret
              mountPath: "/gluetun/wireguard"
      volumes:
        - name: mullvad-config-secret
          secret:
            secretName: mullvad-config-secret
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: slskd-config
          persistentVolumeClaim:
            claimName: slskd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
        - name: tun
          hostPath:
            path: /dev/net/tun
        - name: nfs-auth
          configMap:
            name: nfs-auth
