argocd/media/download/download-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5030
    - port: 443
      targetPort: 5031
  selector:
    app: slskd
