argocd/media/download/qbittorrent-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-internal-route
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["qbittorrent.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: qbittorrent
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: qbittorrent-route
#   namespace: media
# spec:
#   parentRefs:
#   - group: gateway.networking.k8s.io	
#     kind: Gateway	
#     name: gateway-default
#     namespace: default
#   hostnames: ["qbittorrent.lazydogs.work"]
#   rules:
#   - backendRefs:
#       - group: ''	
#         kind: Service	
#         name: qbittorrent
#         port: 80
#         weight: 1
#     matches:
#       - path:
#           type: PathPrefix
#           value: /
